--- a/tasks/install_ports.yml
+++ b/tasks/install_ports.yml
@@ -5,19 +5,23 @@
     selfupdate: yes
   become: yes
 
+# TODO force deactivation of poppler on condition that it's about to be upgraded.
+# check port list outdated output after selfupdate but before upgrade.
+
+- name: Upgrade installed ports
+  macports:
+    upgrade: yes
+  become: yes
+
 # Install separately, since some ports require it, or at least look for it, causing prompts.
 - name: Install OpenJDK
   macports:
-    selfupdate: no
-    upgrade: yes
     name: openjdk8
     state: present
   become: yes
 
 - name: Install ports
   macports:
-    selfupdate: no
-    upgrade: yes
     name: "{{ item.key }}"
     variant: "{{ item.value }}"
     state: present
@@ -30,5 +34,5 @@
   with_dict: "{{ ports_to_select }}"
 
 - name: Reclaim space
-  command: /opt/local/bin/port reclaim
+  command: /opt/local/bin/port reclaim --disable-reminders
   become: yes
