Ensure gnutar is installed and aliased so that unarchive can handle tgz files.

--- a/tasks/install_ports.yml
+++ b/tasks/install_ports.yml
@@ -20,6 +20,21 @@
     state: present
   become: yes
 
+# ansible's unarchive task requires gnu tar.
+- name: Install gnutar
+  macports:
+    name: gnutar
+    state: present
+  become: yes
+
+# unarchive will not use the `gnutar` binary. It will, however, use `gtar`.
+- name: Link gnutar to gtar
+  file:
+    src: /opt/local/bin/gnutar
+    path: /opt/local/bin/gtar
+    state: link
+  become: yes
+
 - name: Install ports
   macports:
     name: "{{ item.key }}"
@@ -32,6 +47,7 @@
   command: "/opt/local/bin/port select {{ item.key }} {{ item.value }}"
   become: yes
   with_dict: "{{ ports_to_select }}"
+
 
 - name: Reclaim space
   command: /opt/local/bin/port reclaim --disable-reminders
