--- a/vars/fonts.yml
+++ b/vars/fonts.yml
@@ -2,3 +2,6 @@
 font_archives:
     # JetBrains Mono
   - https://download.jetbrains.com/fonts/JetBrainsMono-1.0.3.zip
+
+    # DejaVu
+  - https://sourceforge.net/projects/dejavu/files/dejavu/2.37/dejavu-fonts-ttf-2.37.tar.bz2
