--- a/roles/macports/tasks/main.yml
+++ b/roles/macports/tasks/main.yml
@@ -14,7 +14,7 @@
       command: "installer -pkg {{ downloads }}/macports.pkg -target /"
       become: yes
 
-    - name: Add MacPorts to path
+    - name: Add MacPorts (bin) to path
       lineinfile:
         line: /opt/local/bin
         path: /etc/paths
@@ -22,7 +22,7 @@
         insertbefore: /usr/local/bin
       become: yes
 
-    - name: Add MacPorts to path
+    - name: Add MacPorts (sbin) to path
       lineinfile:
         line: /opt/local/sbin
         path: /etc/paths
