Don't fail if poppler isn't isn't being updated, though.

--- a/tasks/install_ports.yml
+++ b/tasks/install_ports.yml
@@ -10,6 +10,7 @@
 - name: Check for poppler upgrade
   shell: "port outdated | grep '^poppler'"
   register: throwaway
+  ignore_errors: yes  # yes, it's fine if we _don't_ find poppler...
 
 - name: Deactivate poppler
   command: port deactivate -f poppler
