--- a/vars/dmgs.yml
+++ b/vars/dmgs.yml
@@ -57,4 +57,8 @@ dmgs_to_download_and_install:
   - app_name: VisualVM
     dmg_url: "https://github.com/visualvm/visualvm.src/releases/download/{{ visualvm_version }}/VisualVM_{{ visualvm_version | replace('.', '') }}.dmg"
 
+  - app_name: VirtualBox
+    dmg_url: "https://download.virtualbox.org/virtualbox/{{ virtualbox_version }}/VirtualBox-{{ virtualbox_version }}-{{ virtualbox_revision }}-OSX.dmg"
+    install_method: VirtualBox.pkg
+
     # TODO parallels?
