--- a/vars/versions.yml
+++ b/vars/versions.yml
@@ -13,3 +13,8 @@ iterm2_version: 3.3.12
 terraform_version: 0.12.28
 visualvm_version: 2.0.3
 xact_version: "2.50"
+
+# Versions as reported by VBoxManage --version are of the form {{ virtualbox_version }}-r{{ virtualbox_revision }}.
+# Both numbers appear in the dmg URL. These two must be kept in sync with each release.
+virtualbox_version: 6.1.12
+virtualbox_revision: 139181
