Put mas back into ports. It's working again.

--- a/vars/ports.yml
+++ b/vars/ports.yml
@@ -32,6 +32,7 @@ ports_to_install:
     lastpass-cli: +pientry
     lastpass-cli-doc:
     lesspipe:
+    mas:
     multimarkdown:
     maven3:
     parallel:
