--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,6 @@
 [defaults]
+# callbacks_enabled = ansible.posix.profile_roles, ansible.posix.profile_tasks, ansible.posix.timer
+callbacks_enabled = ansible.posix.timer
 inventory = inventory
 retry_files_enabled = False
 nocows = 1
