--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -10,6 +10,7 @@
   git:
     repo: https://github.com/emacs-mirror/emacs
     dest: "{{ emacs_src_dir }}"
+    force: yes # build-aux/discard config.{sub,guess}
 
 # Standalone step can fail with "New Mach-O header is too large to relocate" without LDFLAGS.
 # https://py2app.readthedocs.io/en/latest/faq.html
