Add make distclean and make bootstrap (optional) to emacs.

--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -12,6 +12,12 @@
     dest: "{{ emacs_src_dir }}"
     force: yes # discard build-aux/config.{sub,guess}
 
+- name: Run make distclean
+  shell: /opt/local/bin/gmake distclean
+  args:
+    chdir: "{{ emacs_src_dir }}"
+  when: emacs_distclean
+
 # Standalone step can fail with "New Mach-O header is too large to relocate" without LDFLAGS.
 # https://py2app.readthedocs.io/en/latest/faq.html
 # Vaguely related: https://ylluminarious.github.io/2019/06/13/how-i-solved-a-cryptic-emacs-dumping-error/
@@ -26,10 +32,11 @@
 
 # make bootstrap is sometimes necessary. See INSTALL.REPO and
 # https://lists.gnu.org/archive/html/emacs-devel/2019-11/msg00630.html
-#- name: Bootstrap emacs.
-#  command: /opt/local/bin/gmake bootstrap
-#  args:
-#    chdir: "{{  emacs_src_dir }}"
+- name: Bootstrap emacs
+  command: /opt/local/bin/gmake bootstrap
+  args:
+    chdir: "{{  emacs_src_dir }}"
+  when: bootstrap_emacs
 
 - name: Build emacs
   command: /opt/local/bin/gmake install
