--- a/tasks/install_ports.yml
+++ b/tasks/install_ports.yml
@@ -25,9 +25,21 @@
   become: yes
 
 # Install separately, since some ports require it, or at least look for it, causing prompts.
-- name: Install OpenJDK
+- name: Install OpenJDK 8
   macports:
     name: openjdk8
+    state: present
+  become: yes
+
+- name: Install OpenJDK 11
+  macports:
+    name: openjdk11
+    state: present
+  become: yes
+
+- name: Install OpenJDK 17
+  macports:
+    name: openjdk17-zulu
     state: present
   become: yes
 
