Use the right variable name in the condition.

--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -36,7 +36,7 @@
   command: /opt/local/bin/gmake bootstrap
   args:
     chdir: "{{  emacs_src_dir }}"
-  when: bootstrap_emacs
+  when: emacs_bootstrap
 
 - name: Build emacs
   command: /opt/local/bin/gmake install
