pip: Remove aws eb cli and requests. Add other cli crap.
awsebcli has conflicts with other aws utils somehow. dumb.

--- a/vars/pip.yml
+++ b/vars/pip.yml
@@ -19,12 +19,13 @@ pip_user_packages_to_install:
   - botocore
   - boto3
   - awscli
-  - awsebcli
   - aws-sam-cli
   - aws-shell
 
   # Command line and such
   - thefuck
+  - chat-downloader
+  - youtube-dl
 
   ## Python dev
 
@@ -37,6 +38,5 @@ pip_user_packages_to_install:
   - yapf
 
   # Misc
-  - requests
   - psycopg2-binary
   - macholib
