I guess it's ansible_user_id now.
Ansible continues to make unannounced breaking changes...seemingly
unintentionally. Such a delight.

https://github.com/ansible/ansible/issues/23530

--- a/sudoers-playbook.yml
+++ b/sudoers-playbook.yml
@@ -11,7 +11,7 @@
   become: no
   vars:
     nopasswd: no
-    user: "{{ ansible_user }}"
+    user: "{{ ansible_user_id }}"
   tasks:
     - set_fact:
         sudoers_line: "{{ user }}            ALL = (ALL) NOPASSWD:ALL"
