--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -18,6 +18,20 @@
     chdir: "{{ emacs_src_dir }}"
   when: emacs_distclean
 
+# make bootstrap is sometimes necessary. See INSTALL.REPO and
+# https://lists.gnu.org/archive/html/emacs-devel/2019-11/msg00630.html
+- name: Bootstrap emacs
+  command: /opt/local/bin/gmake bootstrap
+  args:
+    chdir: "{{ emacs_src_dir }}"
+  when: emacs_bootstrap
+
+- name: Generate configure script
+  shell: ./autogen.sh
+  args:
+    chdir: "{{ emacs_src_dir }}"
+  when: not emacs_bootstrap  # bootstrap runs autogen.
+
 # Standalone step can fail with "New Mach-O header is too large to relocate" without LDFLAGS.
 # https://py2app.readthedocs.io/en/latest/faq.html
 # Vaguely related: https://ylluminarious.github.io/2019/06/13/how-i-solved-a-cryptic-emacs-dumping-error/
@@ -30,18 +44,10 @@
   args:
     chdir: "{{ emacs_src_dir }}"
 
-# make bootstrap is sometimes necessary. See INSTALL.REPO and
-# https://lists.gnu.org/archive/html/emacs-devel/2019-11/msg00630.html
-- name: Bootstrap emacs
-  command: /opt/local/bin/gmake bootstrap
-  args:
-    chdir: "{{  emacs_src_dir }}"
-  when: emacs_bootstrap
-
 - name: Build emacs
   command: /opt/local/bin/gmake install
   args:
-    chdir: "{{  emacs_src_dir }}"
+    chdir: "{{ emacs_src_dir }}"
 
 - file:
     path: "{{ emacs_src_dir }}/nextstep/Emacs.app/Contents/Frameworks"
@@ -52,7 +58,7 @@
 - name: Make emacs standalone
   command: /usr/bin/python3 -m macholib standalone nextstep/Emacs.app
   args:
-    chdir: "{{  emacs_src_dir }}"
+    chdir: "{{ emacs_src_dir }}"
 
 #- set_fact:
 #    emacs_launchd_plist: "{{ '~/Library/LaunchAgents' | expanduser }}/org.gnu.emacs.daemon.plist"
