--- a/vars/dmgs.yml
+++ b/vars/dmgs.yml
@@ -30,7 +30,7 @@ dmgs_to_download_and_install:
     dmg_url: "https://sourceforge.net/projects/skim-app/files/Skim/Skim-{{ skim_version }}/Skim-{{ skim_version }}.dmg/download"
 
   - app_name: MusicBrainz Picard
-    dmg_url: "https://musicbrainz.osuosl.org/pub/musicbrainz/picard/MusicBrainz-Picard-{{ picard_version }}.dmg"
+    dmg_url: "https://musicbrainz.osuosl.org/pub/musicbrainz/picard/MusicBrainz-Picard-{{ picard_version }}-macOS-10.14.dmg"
 
   - app_name: GPG Keychain
     dmg_url: "https://releases.gpgtools.org/GPG_Suite-{{ gpgtools_version }}.dmg"
