--- a/tasks/preliminaries.yml
+++ b/tasks/preliminaries.yml
@@ -35,3 +35,39 @@
   command: xcodebuild -runFirstLaunch
   when: throwaway.rc != 0
   become: yes
+
+# Allows use of git@github.com in git tasks, etc.
+# While we can get away with using https for most repos, we want our own to be set up with ssh.
+- set_fact:
+    ssh_known_hosts_file: "{{ '~/.ssh/known_hosts' | expanduser }}"
+
+- name: Ensure known_hosts exists
+  file:
+    path: "{{ ssh_known_hosts_file }}"
+    state: file
+
+- name: Check for github in known_hosts
+  shell: "grep '^github\\.com' {{ ssh_known_hosts_file }}"
+  register: throwaway
+
+- block:
+    - name: Get github ssh host key
+      command: "ssh-keyscan -t ecdsa github.com"
+      register: github_ssh_keyscan
+
+    # Compare fingerprint to https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/githubs-ssh-key-fingerprints
+    - name: Get github ssh host key fingerprint
+      shell: "ssh-keygen -lf <<< {{ throwaway.stdout }}"
+      register: github_ssh_fingerprint
+
+    - name: Verify github ssh host key fingerprint
+      fail:
+        msg: ssh key mismatch
+      when: github_ssh_fingerprint.stdout != '256 SHA256:p2QAMXNIC1TJYWeIOttrVc98/R1BUFWu3/LiyKgUfQM github.com (ECDSA)'
+
+    - name: Add github ssh host key to known_hosts
+      lineinfile:
+        file: "{{ ssh_known_hosts_file }}"
+        line: "{{ github_ssh_keyscan.stdout }}"
+
+  when: throwaway.rc != 0
